# epipolar-game

./: .clang-tidy  .gitmodules  CMakeLists.txt  justfile  main.cpp
LibProjectiveGeometry/: CMakeLists.txt  SourceDetectorGeometry.cpp
python/: CMakeLists.txt  epipolar.py
source/: CvPybindInterop.hpp  EpipolarCalculations.cpp  EpipolarCalculations.hpp  GameState.hpp  ImportVolumes.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Scoring.hpp  projection_kernel.cpp  projection_kernel.hpp  python_include.hpp
